# calyx

./: .gitignore  .gitmodules  .vcpkg  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/include/: EditorApp.h  pch.h
editor/include/assembly/: AssemblyBuilder.h  AssemblyDefinition.h
editor/include/inspector/: Inspector.h  InspectorGUI.h  SelectionManager.h  TypeInspector.h  TypeInspectorFunctions.h
editor/include/inspector/components/: CameraComponentInspector.h  MeshComponentInspector.h  TransformComponentInspector.h
editor/include/inspector/types/: AssetInspector.h  FloatInspector.h  StringInspector.h  Vec2Inspector.h  Vec3Inspector.h  Vec4Inspector.h
editor/include/layers/: EditorLayer.h
editor/include/project/: ProjectInfo.h  ProjectManager.h
editor/include/render/: CameraEditor.h
editor/include/windows/: ContentBrowserPanel.h  GamePanel.h  InspectorPanel.h  SceneHierarchyPanel.h  StatisticsPanel.h  ViewportPanel.h
editor/src/: EditorApp.cpp  main.cpp
editor/src/assembly/: AssemblyBuilder.cpp  AssemblyDefinition.cpp
editor/src/inspector/: Inspector.cpp  InspectorGUI.cpp  SelectionManager.cpp
editor/src/inspector/components/: CameraComponentInspector.cpp  MeshComponentInspector.cpp  TransformComponentInspector.cpp
editor/src/inspector/types/: AssetInspector.cpp  FloatInspector.cpp  StringInspector.cpp  Vec2Inspector.cpp  Vec3Inspector.cpp  Vec4Inspector.cpp
editor/src/layers/: EditorLayer.cpp
editor/src/project/: ProjectManager.cpp
editor/src/render/: CameraEditor.cpp
editor/src/windows/: ContentBrowserPanel.cpp  GamePanel.cpp  InspectorPanel.cpp  SceneHierarchyPanel.cpp  StatisticsPanel.cpp  ViewportPanel.cpp
engine/: CMakeLists.txt
engine/include/: Calyx.h  Def.h  Types.h  pch.h
engine/include/assets/: Assembly.h  Asset.h  AssetRegistry.h  Assets.h  Mesh.h  Texture2D.h
engine/include/background/: BackgroundTaskManager.h  ThreadPool.h
engine/include/core/: Application.h  Assert.h  Base.h  EntryPoint.h  ILayer.h  Layer.h  LayerStack.h  Log.h  Macros.h  Platform.h  Time.h  Types.h  Utils.h
engine/include/display/: Window.h  WindowGLFW.h  WindowMode.h
engine/include/ecs/: Component.h  ComponentDefinitions.h  Entity.h  GameObject.h
engine/include/ecs/components/: CameraComponent.h  MeshComponent.h  PointLightComponent.h  TransformComponent.h
engine/include/events/: Event.h  EventKeyboard.h  EventMouse.h  EventWindow.h  KeyCodes.h  MouseCodes.h
engine/include/extra/: TypeProcessor.h  TypeTracker.h
engine/include/gizmos/: Gizmos.h
engine/include/input/: Input.h  InputAction.h  InputActionMap.h  Keyboard.h
engine/include/layers/: GuiLayer.h
engine/include/math/: Math.h  ScreenSpaceUtils.h  Transform.h
engine/include/reflect/: ClassRegistry.h
engine/include/render/: Camera.h  Color.h  RenderContext.h  Renderer.h
engine/include/render/objects/: Buffer.h  Framebuffer.h  IRenderTarget.h  Query.h  Renderbuffer.h  Shader.h  ShaderDefinition.h  Texture.h  Texture2D.h  UniformBuffer.h  VertexArray.h
engine/include/render/opengl/: GLBuffer.h  GLFramebuffer.h  GLQuery.h  GLRenderContext.h  GLRenderbuffer.h  GLRenderer.h  GLShader.h  GLUtils.h  (+4 more)
engine/include/scene/: Scene.h  SceneManager.h  SceneRenderer.h
engine/include/serialization/: DefaultSerializers.h  Serializer.h  TypeSerializer.h  TypeSerializerFunctions.h
engine/include/ui/: Definitions.h  FileDialog.h  Widgets.h
engine/include/utils/: Environment.h  Format.h  Graph.h  Utils.h
engine/src/assets/: Assembly.cpp  AssetRegistry.cpp  Assets.cpp  Mesh.cpp
engine/src/background/: BackgroundTaskManager.cpp  ThreadPool.cpp
engine/src/core/: Application.cpp  EntryPoint.cpp  LayerStack.cpp  Log.cpp  Time.cpp
engine/src/display/: Window.cpp  WindowGLFW.cpp  WindowMode.cpp
engine/src/ecs/: Component.cpp  GameObject.cpp
engine/src/gizmos/: Gizmos.cpp
engine/src/input/: Input.cpp
engine/src/layers/: GuiLayer.cpp
engine/src/math/: Math.cpp  ScreenSpaceUtils.cpp  Transform.cpp
engine/src/reflect/: ClassRegistry.cpp  Global.cpp
engine/src/render/: Camera.cpp  RenderContext.cpp  Renderer.cpp
engine/src/scene/: Scene.cpp  SceneManager.cpp  SceneRenderer.cpp
engine/src/serialization/: DefaultSerializers.cpp  Serializer.cpp
engine/src/ui/: FileDialog.cpp  Widgets.cpp
engine/src/utils/: Environment.cpp  Format.cpp  Graph.cpp  Utils.cpp
launcher/: CMakeLists.txt
launcher/include/: LauncherApp.h  pch.h
launcher/include/layers/: LauncherLayer.h
launcher/include/meta/: RecentProjects.h
launcher/include/project/: ProjectGenerator.h
launcher/src/: LauncherApp.cpp
launcher/src/layers/: LauncherLayer.cpp
launcher/src/meta/: RecentProjects.cpp
launcher/src/project/: ProjectGenerator.cpp
macros/: CMakeLists.txt
macros/include/: Macros.h
project/: CMakeLists.txt
project/include/: pch.h
project/include/assembly/: AssemblyBuilder.h  AssemblyDefinitions.h
project/include/generators/: AssemblyGenerator.h  ComponentGenerator.h  Generator.h  ProjectGenerator.h
project/include/project/: ProjectDefinitions.h  ProjectGenerator.h  ProjectInfo.h  ProjectManager.h
project/include/templates/: AssembliesCMake.h  ComponentHeader.h  ComponentSource.h  PrecompiledHeader.h  RootCMake.h
project/src/assembly/: AssemblyBuilder.cpp
project/src/generators/: AssemblyGenerator.cpp  ComponentGenerator.cpp  ProjectGenerator.cpp
project/src/project/: ProjectGenerator.cpp  ProjectManager.cpp
reflect/lib/: CMakeLists.txt
reflect/lib/include/: Annotations.h  Props.h  Reflect.h  Registration.h
reflect/lib/src/: Reflect.cpp
reflect/tool/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: basic.glsl
sandbox/include/: Sandbox.h  SandboxApp.h
sandbox/include/layers/: TestLayer.h
sandbox/src/: Sandbox.cpp  SandboxApp.cpp
sandbox/src/layers/: TestLayer.cpp
utils/: CMakeLists.txt
utils/include/: ChronoUtils.h  FileUtils.h  FormatUtils.h  Macros.h  PathUtils.h  StringUtils.h  UUIDUtils.h  ValidationUtils.h
utils/src/: FileUtils.cpp  FormatUtils.cpp  PathUtils.cpp  StringUtils.cpp  UUIDUtils.cpp  ValidationUtils.cpp
(+56 files in other folders)
